--- a/www/index.html
+++ b/www/index.html
@@ -27,11 +27,17 @@
     <script src="app/index.constants.js"></script>
 
     <script src="app/components/main/menu.controller.js"></script>
+    <script src="app/components/start/start.controller.js"></script>
     <!--<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>-->
   </head>
 
   <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
+    <div id="start_log" class="start_log">
+      <img class="logo_init" src="img/logo_zerg.png">
+    </div>
+    <div>
+      <ion-nav-view></ion-nav-view>
+    </div>
   </body>
 </html>
