--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,8 @@
 
     <script src="app/components/main/menu.controller.js"></script>
     <script src="app/components/start/start.controller.js"></script>
+    <script src="app/components/login/login.controller.js"></script>
+    <script src="app/components/indexAdds/index.adds.controller.js"></script>
     <!--<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>-->
   </head>
