--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,22 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/restangular/dist/restangular.js"></script>
     <script src="lib/lodash/lodash.js"></script>
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+
+
+    <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
+
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDJdkqm9ZldGQDpDGkkoDIagqNeru4n7OE",
+        authDomain: "ionictest-471dc.firebaseapp.com",
+        databaseURL: "https://ionictest-471dc.firebaseio.com",
+        storageBucket: "ionictest-471dc.appspot.com",
+        messagingSenderId: "1093976214106"
+      };
+      firebase.initializeApp(config);
+    </script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
