--- a/www/index.html
+++ b/www/index.html
@@ -24,11 +24,11 @@
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyDJdkqm9ZldGQDpDGkkoDIagqNeru4n7OE",
-        authDomain: "ionictest-471dc.firebaseapp.com",
-        databaseURL: "https://ionictest-471dc.firebaseio.com",
-        storageBucket: "ionictest-471dc.appspot.com",
-        messagingSenderId: "1093976214106"
+        apiKey: "AIzaSyDpBcnqW8lds5EJtrGjUiI4G2RYIEprKKo",
+        authDomain: "mekan-4e5c4.firebaseapp.com",
+        databaseURL: "https://mekan-4e5c4.firebaseio.com",
+        storageBucket: "mekan-4e5c4.appspot.com",
+        messagingSenderId: "895644856207"
       };
       firebase.initializeApp(config);
     </script>
