changed firebase init position

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
 
-    <script>
+    <!--<script>
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyDpBcnqW8lds5EJtrGjUiI4G2RYIEprKKo",
@@ -31,7 +31,7 @@
         messagingSenderId: "895644856207"
       };
       firebase.initializeApp(config);
-    </script>
+    </script>-->
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
