--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
     <script src="app/components/start/start.controller.js"></script>
     <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/indexAdds/index.adds.controller.js"></script>
+    <script src="app/components/registration/register.controller.js"></script>
     <!--<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>-->
   </head>
