--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
 
   <body ng-app="starter">
     <div id="start_log" class="start_log">
-      <img class="logo_init" src="img/logo_zerg.png">
+      <img class="logo_init" src="img/qualia_logo.png">
     </div>
     <div>
       <ion-nav-view></ion-nav-view>
