--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
     <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/indexAdds/index.adds.controller.js"></script>
     <script src="app/components/registration/register.controller.js"></script>
+    <script src="app/components/createAdd/create.add.controller.js"></script>
     <!--<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>-->
   </head>
